// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowInfo Component matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden my-0"
  >
    <div
      class="w-1/3 mr-2.5 float-left"
    >
      <div
        class="h-0 relative"
        style="padding-top: 140.47619047619045%;"
      >
        <div
          class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full"
        />
        <img
          alt="Loki"
          class="absolute top-0 left-0 w-full h-full hidden"
          src="undefined/uploads/images/medium_portrait/320/801227.jpg"
        />
      </div>
    </div>
    <div
      class=""
    >
      Loki follows the trickster and shape-shifter god who pops up throughout human history as an unlikely influencer on historical events.
    </div>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl"
    >
      Show Info
    </h2>
    <ul>
      <li
        class="mt-2"
      >
        <b>
          Network
        </b>
        : Disney+
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Schedule
        </b>
        : 
        <span>
          Wednesdays
        </span>
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Status
        </b>
        : Running
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Show type
        </b>
        : Scripted
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Genres
        </b>
        : Action, Adventure, Science-Fiction
      </li>
      <li
        class="mt-3"
      >
        <b>
          Official site
        </b>
        : 
        <span>
          <a
            href="https://www.marvel.com/tv-shows/loki/1"
          >
            www.marvel.com
          </a>
        </span>
      </li>
      <li
        class="mt-3"
      >
        <b>
          Rating
        </b>
        : 8.2
      </li>
    </ul>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl mb-2"
    >
      Episode List
    </h2>
    <div
      class="py-1"
      role="button"
      tabindex="1"
    >
      <div
        class="flex justify-between items-center"
      >
        <span>
          Season 1
        </span>
        <span>
          6 Episodes
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShowInfo Component matches the snapshot with a schedule 1`] = `
<DocumentFragment>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden my-0"
  >
    <div
      class="w-1/3 mr-2.5 float-left"
    >
      <div
        class="h-0 relative"
        style="padding-top: 140.47619047619045%;"
      >
        <div
          class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full"
        />
        <img
          alt="Loki"
          class="absolute top-0 left-0 w-full h-full hidden"
          src="undefined/uploads/images/medium_portrait/320/801227.jpg"
        />
      </div>
    </div>
    <div
      class=""
    >
      Loki follows the trickster and shape-shifter god who pops up throughout human history as an unlikely influencer on historical events.
    </div>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl"
    >
      Show Info
    </h2>
    <ul>
      <li
        class="mt-2"
      >
        <b>
          Network
        </b>
        : Disney+
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Schedule
        </b>
        : 
        <span>
          Wednesdays
          <span>
             at 20:00
          </span>
          <span>
             (60 min)
          </span>
        </span>
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Status
        </b>
        : Running
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Show type
        </b>
        : Scripted
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Genres
        </b>
        : Action, Adventure, Science-Fiction
      </li>
      <li
        class="mt-3"
      >
        <b>
          Official site
        </b>
        : 
        <span>
          <a
            href="https://www.marvel.com/tv-shows/loki/1"
          >
            www.marvel.com
          </a>
        </span>
      </li>
      <li
        class="mt-3"
      >
        <b>
          Rating
        </b>
        : 8.2
      </li>
    </ul>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl mb-2"
    >
      Episode List
    </h2>
    <div
      class="py-1"
      role="button"
      tabindex="1"
    >
      <div
        class="flex justify-between items-center"
      >
        <span>
          Season 1
        </span>
        <span>
          6 Episodes
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShowInfo Component matches the snapshot with network value 1`] = `
<DocumentFragment>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden my-0"
  >
    <div
      class="w-1/3 mr-2.5 float-left"
    >
      <div
        class="h-0 relative"
        style="padding-top: 140.47619047619045%;"
      >
        <div
          class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full"
        />
        <img
          alt="Loki"
          class="absolute top-0 left-0 w-full h-full hidden"
          src="undefined/uploads/images/medium_portrait/320/801227.jpg"
        />
      </div>
    </div>
    <div
      class=""
    >
      Loki follows the trickster and shape-shifter god who pops up throughout human history as an unlikely influencer on historical events.
    </div>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl"
    >
      Show Info
    </h2>
    <ul>
      <li
        class="mt-2"
      >
        <b>
          Network
        </b>
        : Test network
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Schedule
        </b>
        : 
        <span>
          Wednesdays
        </span>
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Status
        </b>
        : Running
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Show type
        </b>
        : Scripted
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Genres
        </b>
        : Action, Adventure, Science-Fiction
      </li>
      <li
        class="mt-3"
      >
        <b>
          Official site
        </b>
        : 
        <span>
          <a
            href="https://www.marvel.com/tv-shows/loki/1"
          >
            www.marvel.com
          </a>
        </span>
      </li>
      <li
        class="mt-3"
      >
        <b>
          Rating
        </b>
        : 8.2
      </li>
    </ul>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl mb-2"
    >
      Episode List
    </h2>
    <div
      class="py-1"
      role="button"
      tabindex="1"
    >
      <div
        class="flex justify-between items-center"
      >
        <span>
          Season 1
        </span>
        <span>
          6 Episodes
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShowInfo Component matches the snapshot with null values 1`] = `
<DocumentFragment>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden my-0"
  >
    <div
      class="w-1/3 mr-2.5 float-left"
    >
      <div
        class="h-0 relative"
        style="padding-top: 140.47619047619045%;"
      >
        <div
          class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full"
        />
        <img
          alt="Loki"
          class="absolute top-0 left-0 w-full h-full hidden"
          src="undefined/uploads/images/medium_portrait/320/801227.jpg"
        />
      </div>
    </div>
    <div
      class=""
    >
      Loki follows the trickster and shape-shifter god who pops up throughout human history as an unlikely influencer on historical events.
    </div>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl"
    >
      Show Info
    </h2>
    <ul>
      <li
        class="mt-2"
      >
        <b>
          Network
        </b>
        : N/A
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Schedule
        </b>
        : N/A
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Status
        </b>
        : Running
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Show type
        </b>
        : Scripted
      </li>
      <li
        class="mt-0.5"
      >
        <b>
          Genres
        </b>
        : Action, Adventure, Science-Fiction
      </li>
      <li
        class="mt-3"
      >
        <b>
          Official site
        </b>
        : N/A
      </li>
      <li
        class="mt-3"
      >
        <b>
          Rating
        </b>
        : N/A
      </li>
    </ul>
  </div>
  <div
    class="m-2 px-2 py-3 bg-gray-200 dark:bg-gray-900 bg-opacity-90 dark:bg-opacity-80 overflow-hidden"
  >
    <h2
      class="text-xl mb-2"
    >
      Episode List
    </h2>
    <div
      class="py-1"
      role="button"
      tabindex="1"
    >
      <div
        class="flex justify-between items-center"
      >
        <span>
          Season 1
        </span>
        <span>
          6 Episodes
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
